--- a/index.html
+++ b/index.html
@@ -8,18 +8,18 @@
 </head>
 <body>
     <header>
-        <h1>Selamat Datang di Situs Saya</h1>
+        <h1>Selamat Datang di Situs daily pardit</h1>
     </header>
     
     <main>
         <section>
             <h2>Tentang Kami</h2>
-            <p>Ini adalah halaman web contoh sederhana menggunakan HTML. Anda dapat menambahkan konten di sini sesuai kebutuhan.</p>
+            <p>Ini adalah halaman web daily pardit disini semua tentang PARDIT</p>
         </section>
 
         <section>
             <h2>Kontak</h2>
-            <p>Email: contoh@email.com</p>
+            <p>Email: muhammadfachrizal128@gmail.com</p>
         </section>
     </main>
 
